Closed Bug 328946 Opened 18 years ago Closed 18 years ago

Empty <table> causes "ASSERTION: Must only be called on reflowed lines"

Categories

(Core :: Layout: Tables, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: roc)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

An empty <table> causes:

###!!! ASSERTION: Must only be called on reflowed lines: '!(GetStateBits() & NS_FRAME_IS_DIRTY)', file /Users/admin/trunk/mozilla/layout/generic/nsFrame.cpp, line 3534
Attached file testcase
This is probably a regression introduced sometime in the last 7 days. My debug build from 20060223 did not show this assertion, now i rebuilt and i see the assertion, too (Win2k, SeaMonkey trunk).
OS: MacOS X → All
Hardware: Macintosh → All
Ok, ignore me, this assertion is new in code, so of course no regression...
CCing roc since he added this assertion.
Blocks: 256311
Attached patch fixSplinter Review
We call CachedIsEmpty from PlaceBlock() ... the frame has been reflowed, but it's still marked dirty because we haven't determined its final position and called FinishReflowChild on it yet. Mark it dirty early to indicate that it really is OK.
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #213849 - Flags: superreview?(dbaron)
Attachment #213849 - Flags: review?(dbaron)
Comment on attachment 213849 [details] [diff] [review]
fix

This scares me a little, especially since I'm checking this bit more on the reflow branch, but I suppose this should be ok.
Attachment #213849 - Flags: superreview?(dbaron)
Attachment #213849 - Flags: superreview+
Attachment #213849 - Flags: review?(dbaron)
Attachment #213849 - Flags: review+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Crashtest checked in.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: