Bug 328946. Mark reflowed block as non-dirty earlier, so we don't get a spurious assertion. r+sr=dbaron